--- a/css/tcn-402578.webflow.css
+++ b/css/tcn-402578.webflow.css
@@ -965,6 +965,7 @@ a {
 .contact-page-container {
   display: flex;
   padding: 20px;
+  margin: 0 90px;
   flex-direction: column;
   justify-content: flex-start;
   align-items: center;
@@ -972,11 +973,20 @@ a {
 }
 
 .contact-page-container h1 {
-  position: relative;
-  left: -84px;
+  margin-left: 780px;
   font-size: 40px;
+  width: 1000px;
 
 }
+
+.contact-page-container h2 {
+  margin-left: 650px;
+  font-size: 40px;
+  width: 1000px;
+
+}
+
+
 
 .contact-heading {
   display: flex;
@@ -1304,7 +1314,7 @@ color: #000;
   
   justify-content: flex-end;
   align-items: center;
-  height: 180px;
+  height: 160px;
 }
 .footer-icon img {
   width: 40px;
@@ -1501,7 +1511,7 @@ color: white;
   }
 
   .tcn-logo-nav {
-    margin-top: 80px;
+    margin-top: auto;
     margin-right: auto;
     margin-left: auto;
     
